--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,22 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+
+    ext {
+        gradleVersion = '3.2.1'
+
+        supportLibraryVersion = '28.0.0'
+        retrofitLibraryVersion = '2.4.0'
+        okhttpLibraryVersion = '3.10.0'
+        gsonLibraryVersion = '2.8.5'
+        butterknifeLibraryVersion = '8.8.1'
+        glideLibraryVersion = '4.8.0'
+        circlerImageVersion = '2.2.0'
+        espressoVersion = '3.0.2'
+        runnerVersion = '1.0.2'
+        junitVersion = '4.12'
+        constraintLayoutVersion = '1.1.3'
+    }
     
     repositories {
         mavenCentral()
@@ -8,12 +24,9 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
-        
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath "com.android.tools.build:gradle:$gradleVersion"
     }
+
 }
 
 allprojects {
