--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,15 +4,21 @@
     package="com.dicoding.kailani.submission.moviecatalogue"
     tools:ignore="GoogleAppIndexingWarning">
 
-    <!-- Read Permisison Movie Catalogue Database-->
-    <permission android:name="com.dicoding.kailani.submission.moviecatalogue.READ_DATABASE" android:protectionLevel="normal" />
-    <permission android:name="com.dicoding.kailani.submission.moviecatalogue.WRITE_DATABASE" android:protectionLevel="normal" />
+    <!-- Read Permisison Movie Catalogue Database -->
+    <permission
+        android:name="com.dicoding.kailani.submission.moviecatalogue.READ_DATABASE"
+        android:protectionLevel="normal" />
 
-    <!-- Internet Permission-->
+    <permission
+        android:name="com.dicoding.kailani.submission.moviecatalogue.WRITE_DATABASE"
+        android:protectionLevel="normal" />
+
+    <!-- Internet Permission -->
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
-        android:name="com.dicoding.kailani.submission.moviecatalogue.App"
+        android:name=".App"
         android:allowBackup="true"
         android:fullBackupContent="true"
         android:icon="@mipmap/ic_launcher"
@@ -21,7 +27,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.dicoding.kailani.submission.moviecatalogue.view.activity.MainActivity"
+            android:name=".view.activity.MainActivity"
             android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -29,15 +35,50 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.dicoding.kailani.submission.moviecatalogue.view.activity.DetailMoviesActivity" />
 
+        <activity android:name=".view.activity.DetailMoviesActivity"
+            android:parentActivityName=".view.activity.MainActivity"/>
 
+        <activity android:name=".view.activity.SettingActivity"
+            android:parentActivityName=".view.activity.MainActivity"/>
+
+        <!-- Content Provider-->
         <provider
+            android:name=".database.provider.MovieProvider"
             android:authorities="com.dicoding.kailani.submission.moviecatalogue"
-            android:name="com.dicoding.kailani.submission.moviecatalogue.database.provider.MovieProvider"
             android:exported="true"
             android:readPermission="com.dicoding.kailani.submission.moviecatalogue.READ_DATABASE"
             android:writePermission="com.dicoding.kailani.submission.moviecatalogue.WRITE_DATABASE" />
+
+        <!-- Widget Service -->
+        <receiver android:name=".view.widget.FavoriteMovieWidget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/favorite_widget_info" />
+        </receiver>
+
+        <!-- Stack Widget Service -->
+        <service
+            android:name=".service.StackWidgetService"
+            android:permission="android.permission.BIND_REMOTEVIEWS" />
+
+
+        <!-- Release Today Service -->
+        <receiver
+            android:name=".service.ReleaseTodayService"
+            android:enabled="true"
+            android:exported="false">
+        </receiver>
+
+        <!-- Daily Reminder Service -->
+        <receiver
+            android:name=".service.DailyReminderService"
+            android:enabled="true"
+            android:exported="false" />
 
     </application>
 
